# amplifier-chat

./: E2E_test.html  README.md  feedback-analysis-story.html  fix_index.html  main_index.html  overview.dot  product-launch.html  pyproject.toml  team_knowledge_requirements.md  token-usage-mockup.html  video-editing-story.html
.superpowers/brainstorm/73080-1774392993/: .server-stopped  comprehensive-plan.html
.superpowers/brainstorm/8690-1774389013/: .server-stopped  session-ux-mockup.html
docs/: amplifier-chat-system.dot  amplifier-chat.dot  event-flow-deep.dot  subsession-message-routing.dot  system-diagram.dot  team-knowledge-gap-analysis.dot
docs/plans/: 2026-03-09-sub-session-rendering-design.md  2026-03-09-sub-session-rendering-plan.md  2026-03-11-frontend-analysis-lifecycle.md  2026-03-11-hidden-session-filtering.md  2026-03-12-message-activity-correlation-layout.md
docs/superpowers/plans/: 2026-03-22-per-session-input-drafts.md  2026-03-25-diagram-writer.md  2026-03-26-pr1-security-hardening.md  2026-03-26-pr2-backend-reliability.md  2026-03-26-pr3-event-pipeline.md  2026-03-26-pr4-frontend-state-cleanup.md
docs/superpowers/specs/: 2026-03-23-shell-mode-design.md
recipes/: feedback-analysis.yaml  session-diagnostics.yaml
src/amplifierd/: persistence.py
src/amplifierd/state/: session_manager.py
src/chat_plugin/: __init__.py  __main__.py  cli.py  commands.py  feedback.py  pin_storage.py  routes.py  session_history.py  session_utils.py  shell.py  voice.py
src/chat_plugin/static/: feedback-widget.js  index.html
tests/: conftest.py  test_command_async.py  test_commands.py  test_delegate_ref_counting.py  test_feedback.py  test_frontend_analysis_lifecycle.py  test_frontend_findings_checklist.py  test_input_area_queue.py  test_input_validation.py  test_main_dev_mode.py  test_persistence.py  test_pin_storage.py  test_plugin_load.py  test_preserve_input_on_send_failure.py  test_routes.py  test_session_history.py  test_session_id_regex.py  test_session_manager.py  test_session_utils.py  test_voice_security.py  test_voice_settings.py
