[project]
name = "amplifier-chat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
standalone = [
    "amplifierd @ git+https://github.com/microsoft/amplifierd",
    "uvicorn[standard]>=0.30",
    "click>=8.0",
]
dev = [
    "amplifierd @ git+https://github.com/microsoft/amplifierd",
    "uvicorn[standard]>=0.30",
    "click>=8.0",
]
test = ["pytest", "pytest-anyio", "pytest-asyncio", "httpx"]

[project.scripts]
amplifier-chat = "chat_plugin.cli:main"

[project.entry-points."amplifierd.plugins"]
chat = "chat_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chat_plugin"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
